--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,6 @@ commands:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
-      - run:
-          name: Fetch CocoaPods specs
-          command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
   test:
     parameters:
       scheme:
@@ -84,8 +81,8 @@ workflows:
           filters: *test_filters
       - test_internal_app:
           filters: *test_filters
-      - deploy_internal_app_beta:
-          filters:
-            branches:
-              only:
-                - master
+      - deploy_internal_app_beta
+          # filters:
+          #   branches:
+          #     only:
+          #       - master
