--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ commands:
       - run:
           name: Test
           command: bundle exec fastlane test scheme:<< parameters.scheme >>
+      - store_artifacts:
+          path: "~/Library/Logs/"
   beta:
     steps:
       - setup
