Finalize CI log changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ commands:
           name: Deploy to App Center
           command: bundle exec fastlane beta
       - store_artifacts:
-          path: "~/Library/Logs"
+          path: "~/Library/Logs/gym"
 
 jobs:
   test_twilio_app:
@@ -86,9 +86,7 @@ workflows:
       - test_internal_app:
           filters: *test_filters
       - deploy_internal_app_beta:
-          filters: *test_filters
-      # - deploy_internal_app_beta:
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
+          filters:
+            branches:
+              only:
+                - master
