Try artifact destination

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ commands:
           command: bundle exec fastlane test scheme:<< parameters.scheme >>
       - store_artifacts:
           path: "~/Library/Logs/scan"
+          destination: "scan-file"
   beta:
     steps:
       - setup
