AHOYAPPS-229: Change track names (#30)
* Change track names

* Try to fix UI test in CI

* Fix CI

* Fix CI

* Fix CI

* Finalize CI log changes

* Try artifact destination

* Add destination for gym log

* Add UI test logging

* Remove temp logging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,9 @@ commands:
       - run:
           name: Test
           command: bundle exec fastlane test scheme:<< parameters.scheme >>
+      - store_artifacts:
+          path: "~/Library/Logs/scan"
+          destination: "scan"
   beta:
     steps:
       - setup
@@ -49,6 +52,9 @@ commands:
       - run:
           name: Deploy to App Center
           command: bundle exec fastlane beta
+      - store_artifacts:
+          path: "~/Library/Logs/gym"
+          destination: "gym"
 
 jobs:
   test_twilio_app:
