--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,8 @@ commands:
             mkdir -p Credentials || true
             base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
             base64 -D \<<< $INTERNAL_CREDENTIALS_JSON -o Credentials/InternalCredentials.json
-            base64 -D \<<< $INTERNAL_INFO_PLIST -o VideoApp/VideoApp/Info.plist
             base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
+            sed -i '' -e "s/APP_CENTER_APP_SECRET_PLACEHOLDER/$APP_CENTER_APP_SECRET/g" VideoApp/VideoApp/Info.plist
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
