--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ commands:
             base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
             base64 -D \<<< $INTERNAL_CREDENTIALS_JSON -o Credentials/InternalCredentials.json
             base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
-            sed -i '' -e "s/APP_CENTER_APP_SECRET_PLACEHOLDER/$APP_CENTER_APP_SECRET" VideoApp/VideoApp/Info.plist
+            sed -i '' -e "s/APP_CENTER_APP_SECRET_PLACEHOLDER/$APP_CENTER_APP_SECRET/" VideoApp/VideoApp/Info.plist
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
