--- a/VideoApp/Video-TwilioUITests/TestCredentialsStore/TestCredentials.json.example
+++ b/VideoApp/Video-TwilioUITests/TestCredentialsStore/TestCredentials.json.example
@@ -1,6 +1,6 @@
 {
     "email_sign_in_user": {
-        "email": null,
-        "password": null
+        "email": "",
+        "password": ""
     }
 }
