--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,12 +83,12 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      # - test_twilio_app:
-      #     filters: *test_filters
-      # - test_community_app:
-      #     filters: *test_filters
-      # - test_internal_app:
-      #     filters: *test_filters
+      - test_twilio_app:
+          filters: *test_filters
+      - test_community_app:
+          filters: *test_filters
+      - test_internal_app:
+          filters: *test_filters
       - deploy_internal_app_beta:
           filters: *test_filters
           # filters:
