Use build phase script to set App Center app secret in Info.plist

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,9 @@ commands:
             base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
             base64 -D \<<< $CREDENTIALS_JSON -o Credentials/Credentials.json
             base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
-            sed -i '' -e "s/APP_CENTER_APP_SECRET_PLACEHOLDER/$APP_CENTER_APP_SECRET/" VideoApp/VideoApp/Info.plist
+      - run:
+          name: Install jq
+          command: brew install jq
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
