--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,9 @@ commands:
             base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
             base64 -D \<<< $CREDENTIALS_JSON -o Credentials/Credentials.json
             base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
-      - run:
-          name: Install jq
-          command: brew install jq
+      # - run:
+      #     name: Install jq
+      #     command: brew install jq
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
