--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,8 @@ commands:
             mkdir -p Credentials || true
             base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
             base64 -D \<<< $CREDENTIALS_JSON -o Credentials/Credentials.json
+            base64 -D \<<< $CREDENTIALS_XCCONFIG -o Credentials/Credentials.xcconfig
             base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
-      # - run:
-      #     name: Install jq
-      #     command: brew install jq
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
