--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,7 @@ commands:
       - run:
           name: Install credentials
           command: |
-            mkdir -p Credentials || true
-            base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
-            base64 -D \<<< $CREDENTIALS_XCCONFIG -o Credentials/Credentials.xcconfig
-            base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
+            base64 -D \<<< $SECRETS_TAR | tar -x
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
