--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ playground.xcworkspace
 /fastlane/report.xml
 /fastlane/test_output
 
-# Credentials
-/Credentials/
+# Secrets
+/IOSVideoAppSecrets/
