--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,8 @@ commands:
     steps:
       - checkout
       - run:
-          name: Install credentials
-          command: |
-            base64 -D \<<< $SECRETS_TAR | tar -x
+          name: Install secrets
+          command: base64 -D \<<< $SECRETS_TAR | tar -x
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
