AHOYAPPS-238: Enable in-app updates (#34)
* Add App Center software update alert

* Force deploy to App Center

* Add credentials to CI

* Bump bundle version

* Bump version

* Add URL scheme to plist

* Bump version

* Temp copy change

* Add placeholder App Center URL scheme

* Make CI replace App Center app secret placeholder

* Clean up CI

* Fix CI

* Try moving app center out of app delegate

* Bump version

* Only start App Center if not debug build

* Fix .gitignore

* Fix version numbers

* Bump version

* Clean up

* More cleanup

* Fix CI

* Add example credentials file

* Bump version

* Bump version

* Use build phase script to set App Center app secret in Info.plist

* Fix CI

* Use Ruby script for App Center URL scheme

* Disable Ruby script

* Use xcconfig for credentials

* Fix CI

* Remove Credentials.json

* Bump version

* Remove dead code

* Remove more dead code

* Clean up project file

* Remove xcconfig from target

* Use secrets tar

* Update readme

* Bump version

* Fix version

* Bump version

* Bump version

* Fix version

* Bump version

* Bump version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,8 @@ commands:
     steps:
       - checkout
       - run:
-          name: Install credentials
-          command: |
-            mkdir -p Credentials || true
-            base64 -D \<<< $GOOGLE_SERVICE_INFO_PLIST -o Credentials/GoogleService-Info.plist
-            base64 -D \<<< $TEST_CREDENTIALS_JSON -o Credentials/TestCredentials.json
+          name: Install secrets
+          command: base64 -D \<<< $SECRETS_TAR | tar -x
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
@@ -88,7 +85,8 @@ workflows:
       - test_internal_app:
           filters: *test_filters
       - deploy_internal_app_beta:
-          filters:
-            branches:
-              only:
-                - master
+          filters: *test_filters
+          # filters:
+          #   branches:
+          #     only:
+          #       - master
