Disable unit tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,12 +80,12 @@ workflows:
     jobs:
       - test_twilio_app:
           filters: *test_filters
-      - test_community_app:
-          filters: *test_filters
-      - test_internal_app:
-          filters: *test_filters
-      - deploy_internal_app_beta:
-          filters:
-            branches:
-              only:
-                - master
+      # - test_community_app:
+      #     filters: *test_filters
+      # - test_internal_app:
+      #     filters: *test_filters
+      # - deploy_internal_app_beta:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
