Disable deep link UI tests until they are reliable on CI

--- a/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-TwilioUITests.xcscheme
+++ b/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-TwilioUITests.xcscheme
@@ -37,6 +37,14 @@
                BlueprintName = "Video-TwilioUITests"
                ReferencedContainer = "container:VideoApp.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "DeepLinkTests/test_roomDeepLink_withUserSignedIn_shouldNavigateToLobbyScreenAndSetRoomName()">
+               </Test>
+               <Test
+                  Identifier = "DeepLinkTests/test_roomDeepLink_withUserSignedOut_shouldRequireUserToSignInAndNavigateToLobbyScreenAndSetRoomName()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
