Update config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,15 +18,7 @@ commands:
       - checkout
       - run:
           name: Install secrets
-          command: |
-            base64 -D \<<< $SECRETS_TAR | tar -x
-            chmod 600 .circleci/.netrc
-            cp .circleci/.netrc ~/.netrc
-            sed -i '' "s/BINTRAY_USERNAME/${BINTRAY_USERNAME}/g" ~/.netrc
-            sed -i '' "s/BINTRAY_PASSWORD/${BINTRAY_PASSWORD}/g" ~/.netrc
-      - run:
-          name: Setup internal pod repo
-          commmand: pod repo add cocoapod-specs-internal git@github.com:twilio/cocoapod-specs-internal.git
+          command: base64 -D \<<< $SECRETS_TAR | tar -x
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
@@ -36,6 +28,9 @@ commands:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
+      - run:
+          name: Setup internal pod repo
+          commmand: ./circleci/setup_internal_pod_repo.sh
   test:
     parameters:
       scheme:
