--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,8 +94,9 @@ workflows:
           filters: *test_filters
       - run_ui_tests:
           filters: *test_filters
-      - deploy_internal_app_beta:
-          filters:
-            branches:
-              only:
-                - master
+      # - deploy_internal_app_beta:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
+      - deploy_internal_app_beta
