Convert to use test plans

--- a/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-Twilio.xcscheme
+++ b/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-Twilio.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1100"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -47,6 +47,18 @@
             ReferencedContainer = "container:VideoApp.xcodeproj">
          </BuildableReference>
       </CodeCoverageTargets>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Video-TwilioTests/Plans/Unit.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Video-TwilioTests/Plans/UI.xctestplan">
+         </TestPlanReference>
+         <TestPlanReference
+            reference = "container:Video-TwilioTests/Plans/StatusCheck.xctestplan">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO">
