--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,21 +106,19 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - status_check:
+      - test_twilio_app:
           filters: *test_filters
-      # - test_twilio_app:
-      #     filters: *test_filters
-      # - test_community_app:
-      #     filters: *test_filters
-      # - test_internal_app:
-      #     filters: *test_filters
-      # - run_ui_tests:
-      #     filters: *test_filters
-      # - deploy_internal_app_beta:
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
+      - test_community_app:
+          filters: *test_filters
+      - test_internal_app:
+          filters: *test_filters
+      - run_ui_tests:
+          filters: *test_filters
+      - deploy_internal_app_beta:
+          filters:
+            branches:
+              only:
+                - master
   status_check:
     triggers:
       - schedule:
