AHOYAPPS-468: Add hourly CI status check (#63)
* Add join room UI test

* Convert to use test plans

* Run status check every hour on CI

* Fix CI

* Update fastlane

* Make room name for status check more descriptive

* Test Slack message

* Fix Slack notification

* Clean up Slack notification

* Fix CI

* Fix CI

* Fix CI

* Fix CI

* Fix CI

* Add URL to Slack message

* Fix CI

* Revert temp changes

* Fix CI

* Add sleep after sign in again

* Revert temp changes

* Add comment

* Replace sleep with async expect

* Improve comment

* Alphabetical order test plans

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ aliases:
 executors:
   macos_executor:
     macos:
-      xcode: "11.2.0"
+      xcode: "11.4.0"
 
 commands:
   setup:
@@ -31,18 +31,30 @@ commands:
       - run:
           name: Setup internal pod repo
           command: sh .circleci/setup_internal_pod_repo.sh
+  store_scan_artifacts:
+    steps:
+      - store_artifacts:
+          path: "~/Library/Logs/scan"
+          destination: "scan"
   test:
     parameters:
       scheme:
+        type: string
+      test_plan:
         type: string
     steps:
       - setup
       - run:
           name: Test
-          command: bundle exec fastlane test scheme:<< parameters.scheme >>
-      - store_artifacts:
-          path: "~/Library/Logs/scan"
-          destination: "scan"
+          command: bundle exec fastlane test scheme:<< parameters.scheme >> test_plan:<< parameters.test_plan >>
+      - store_scan_artifacts
+  status_check:
+    steps:
+      - setup
+      - run:
+          name: Status check
+          command: bundle exec fastlane status_check
+      - store_scan_artifacts
   beta:
     steps:
       - setup
@@ -62,21 +74,29 @@ jobs:
     steps:
       - test:
           scheme: Video-Twilio
+          test_plan: Unit
   test_community_app:
     executor: macos_executor
     steps:
       - test:
           scheme: Video-Community
+          test_plan: Unit
   test_internal_app:
     executor: macos_executor
     steps:
       - test:
           scheme: Video-Internal
+          test_plan: Unit
   run_ui_tests:
     executor: macos_executor
     steps:
       - test:
-          scheme: Video-TwilioUITests
+          scheme: Video-Twilio
+          test_plan: UI
+  status_check:
+    executor: macos_executor
+    steps:
+      - status_check
   deploy_internal_app_beta:
     executor: macos_executor
     steps:
@@ -99,3 +119,13 @@ workflows:
             branches:
               only:
                 - master
+  status_check:
+    triggers:
+      - schedule:
+          cron: "0 * * * *"
+          filters:
+            branches:
+              only:
+                - master
+    jobs:
+      - status_check
