--- a/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-Community.xcscheme
+++ b/VideoApp/VideoApp.xcodeproj/xcshareddata/xcschemes/Video-Community.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1200"
+   LastUpgradeVersion = "1100"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -27,6 +27,15 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4B00125F1FBA52E5004A587E"
+            BuildableName = "Video-Community.app"
+            BlueprintName = "Video-Community"
+            ReferencedContainer = "container:VideoApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <TestPlans>
          <TestPlanReference
             reference = "container:Video-CommunityTests/Plans/Unit.xctestplan"
