--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ commands:
       - store_artifacts:
           path: "~/Library/Logs/scan"
           destination: "scan"
+      - store_artifacts:
+          path: "~/Library/Logs/DiagnosticReports"
   test:
     parameters:
       scheme:
