--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,21 +104,21 @@ workflows:
           filters: *test_filters
       - test_internal_app:
           filters: *test_filters
-      - run_ui_tests:
-          filters: *test_filters
+      # - run_ui_tests:
+      #     filters: *test_filters
       - deploy_internal_app_beta:
           filters:
             branches:
               only:
                 - master
-  status_check:
-    triggers:
-      - schedule:
-          cron: "0 * * * *"
-          filters:
-            branches:
-              only:
-                - master
-    jobs:
-      - status_check
+  # status_check:
+  #   triggers:
+  #     - schedule:
+  #         cron: "0 * * * *"
+  #         filters:
+  #           branches:
+  #             only:
+  #               - master
+  #   jobs:
+  #     - status_check
  
