--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,8 +104,8 @@ workflows:
           filters: *test_filters
       - test_internal_app:
           filters: *test_filters
-      # - run_ui_tests:
-      #     filters: *test_filters
+      - run_ui_tests:
+          filters: *test_filters
       - deploy_internal_app_beta:
           filters:
             branches:
