--- a/.circleci/.netrc
+++ b/.circleci/.netrc
@@ -1,3 +1,3 @@
-machine twilio.bintray.com
-  login BINTRAY_USERNAME
-  password BINTRAY_API_KEY
+machine twilio.jfrog.io
+  login ARTIFACTORY_USERNAME
+  password ARTIFACTORY_API_KEY
