--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ commands:
       - setup
       - run:
           name: Setup code signing
-          command: sh .circleci/setup_code_signing.sh
+          command: bundle exec fastlane ci_match_install
       - run:
           name: Deploy to App Center
           command: bundle exec fastlane beta
